force-app/main/default/objects/Bond__c/fields/Amount_Returned__c.field-meta.xml
<CustomField>
    <fullName>Amount_Returned__c</fullName>
    <description>Amount of the bond returned.</description>
    <label>Amount Returned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>