force-app/main/default/objects/Bond__c/fields/Bond_Status__c.field-meta.xml
<CustomField>
    <fullName>Bond_Status__c</fullName>
    <description>For users (external and internal) to select status of Bond.</description>
    <label>Bond Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reinstated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>