force-app/main/default/objects/Bond__c/fields/Bond_Type__c.field-meta.xml
<CustomField>
    <fullName>Bond_Type__c</fullName>
    <description>Records the type of bond for the record.</description>
    <label>Bond Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appeal Bond</fullName>
            </value>
            <value>
                <fullName>Registration/Surety Bond</fullName>
            </value>
            <value>
                <fullName>Certificate of Deposit</fullName>
            </value>
            <value>
                <fullName>Cashier&#39;s Check</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>