force-app/main/default/objects/Bond__c/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <description>Date the bond was posted to the Employer/Entity.</description>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>