force-app/main/default/objects/Bond__c/fields/Date_Request_Made_to_Hold_Bond__c.field-meta.xml
<CustomField>
    <fullName>Date_Request_Made_to_Hold_Bond__c</fullName>
    <description>Field required on the Bond object per requirement F1390.</description>
    <label>Date Request Made to Hold Bond</label>
    <type>Date</type>
</CustomField>