force-app/main/default/objects/Bond__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>On what date was or will your bond be effective? Date format: mm/dd/yyyy or select the downward arrow to choose a date from the calendar view.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>