force-app/main/default/objects/Bond__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Date format: mm/dd/yyyy or select the downward arrow to choose a date from the calendar view.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>