force-app/main/default/objects/Bond__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <description>Indicates that data came from Oracel Car Wash</description>
    <label>Imported From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LR-CW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>