force-app/main/default/objects/Bond__c/fields/Name_of_Surety_Company__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Surety_Company__c</fullName>
    <label>Name of Surety Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>