force-app/main/default/objects/Bond__c/fields/Posted_By__c.field-meta.xml
<CustomField>
    <fullName>Posted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Account object to relate a bond to an Employer/Entity</description>
    <label>Posted By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bonds</relationshipLabel>
    <relationshipName>Bonds</relationshipName>
    <type>Lookup</type>
</CustomField>