force-app/main/default/objects/Bond__c/fields/Surety_Type__c.field-meta.xml
<CustomField>
    <fullName>Surety_Type__c</fullName>
    <formula>TEXT(Registration__r.Surety_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surety Type</label>
    <type>Text</type>
</CustomField>